fixed z-index header nav

--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ a.btn-wh:hover {
     right: 0;
     left: 0;
     top: 0;
+    z-index: 1;
 }
 
 .header-nav a {
